[gd_scene load_steps=18 format=2]

[ext_resource path="res://Script/Level.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/mid-layer-01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/mid-layer-02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/trees.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Tilemaps/SwampTilemap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shaders/GlowShader.shader" type="Shader" id=8]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/mid-layer-01-emission-mask.png" type="Texture" id=9]
[ext_resource path="res://Scenes/WorldEnvironment.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Gothicvania/Background/Swamp/mid-layer-02-emission-mask.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Enemies/SwampStage/Spider.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Enemies/SwampStage/FlyingGhost.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Enemies/SwampStage/Thing.tscn" type="PackedScene" id=14]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/glow_color = Color( 1, 0.329412, 0, 1 )
shader_param/emission_texture = ExtResource( 9 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/glow_color = Color( 1, 0.329412, 0, 1 )
shader_param/emission_texture = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 151, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 87 )

[node name="SwampStage" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 10 )]

[node name="Tilemaps" type="Node2D" parent="."]

[node name="Bg" parent="Tilemaps" instance=ExtResource( 6 )]
collision_layer = 0
tile_data = PoolIntArray( 655410, 5, 0, 655464, 5, 0, 655493, 6, 0, 655611, 5, 0, 655613, 5, 0, 655638, 7, 0, 655643, 5, 0, 655645, 6, 0, 655649, 7, 0, 655653, 5, 0, 655654, 6, 0, 655657, 7, 0, 720952, 7, 0, 720965, 6, 0, 720967, 5, 0, 720970, 7, 0, 720999, 5, 0, 721000, 7, 0, 721001, 7, 0, 721003, 7, 0, 721011, 7, 0, 721013, 7, 0, 721014, 5, 0, 721016, 6, 0, 721019, 5, 0, 721028, 7, 0, 721029, 536870917, 0, 721030, 536870919, 0, 721049, 536870919, 0, 721057, 7, 0, 721058, 7, 0, 721059, 5, 0, 721066, 5, 0, 721067, 6, 0, 721070, 5, 0, 721087, 5, 0, 721089, 536870917, 0, 721090, 5, 0, 721092, 7, 0, 721099, 7, 0, 721100, 6, 0, 721101, 7, 0, 721103, 5, 0, 721146, 5, 0, 721147, 7, 0, 721148, 7, 0, 721149, 6, 0, 721150, 7, 0, 721173, 7, 0, 721174, 5, 0, 721175, 5, 0, 721176, 7, 0, 786501, 7, 0, 786502, 7, 0, 786503, 5, 0, 786504, 5, 0, 786505, 6, 0, 786507, 7, 0, 786534, 7, 0, 786535, 7, 0, 786536, 6, 0, 786537, 5, 0, 786538, 7, 0, 786539, 5, 0, 786547, 7, 0, 786548, 5, 0, 786549, 6, 0, 786551, 5, 0, 786552, 7, 0, 786553, 5, 0, 786554, 7, 0, 786555, 5, 0, 786556, 7, 0, 786563, 7, 0, 786564, 5, 0, 786566, 7, 0, 786567, 5, 0, 786584, 7, 0, 786585, 6, 0, 786586, 7, 0, 786593, 6, 0, 786594, 7, 0, 786595, 5, 0, 786602, 7, 0, 786603, 5, 0, 786604, 7, 0, 786605, 7, 0, 786606, 7, 0, 786623, 536870917, 0, 786624, 7, 0, 786625, 5, 0, 786626, 7, 0, 786627, 7, 0, 786628, 5, 0, 786635, 5, 0, 786636, 7, 0, 786637, 5, 0, 786638, 5, 0, 786639, 6, 0, 786640, 7, 0, 786682, 7, 0, 786683, 5, 0, 786684, 7, 0, 786685, 5, 0, 786686, 6, 0, 786687, 5, 0, 786709, 5, 0, 786710, 7, 0, 786711, 5, 0, 786713, 7, 0, 852092, 6, 0, 917574, 8, 0, 917578, 8, 0, 917607, 8, 0, 917611, 8, 0, 917619, 8, 0, 917623, 8, 0, 917627, 8, 0, 917636, 8, 0, 917640, 8, 0, 917657, 8, 0, 917666, 8, 0, 917670, 8, 0, 917675, 8, 0, 917679, 8, 0, 917696, 8, 0, 917700, 8, 0, 917708, 8, 0, 917712, 8, 0, 917755, 8, 0, 917759, 8, 0, 917782, 8, 0, 917785, 8, 0, 983110, 9, 0, 983111, 9, 0, 983112, 9, 0, 983113, 9, 0, 983114, 9, 0, 983115, 9, 0, 983116, 9, 0, 983117, 9, 0, 983142, 9, 0, 983143, 9, 0, 983144, 9, 0, 983145, 9, 0, 983146, 9, 0, 983147, 9, 0, 983148, 9, 0, 983149, 9, 0, 983150, 9, 0, 983151, 9, 0, 983152, 9, 0, 983153, 9, 0, 983154, 9, 0, 983155, 9, 0, 983156, 9, 0, 983157, 9, 0, 983158, 9, 0, 983159, 9, 0, 983160, 9, 0, 983161, 9, 0, 983162, 9, 0, 983163, 9, 0, 983164, 9, 0, 983165, 9, 0, 983166, 9, 0, 983171, 9, 0, 983172, 9, 0, 983173, 9, 0, 983174, 9, 0, 983175, 9, 0, 983176, 9, 0, 983177, 9, 0, 983178, 9, 0, 983179, 9, 0, 983193, 9, 0, 983194, 9, 0, 983195, 9, 0, 983196, 9, 0, 983197, 9, 0, 983198, 9, 0, 983199, 9, 0, 983200, 9, 0, 983201, 9, 0, 983202, 9, 0, 983203, 9, 0, 983204, 9, 0, 983205, 9, 0, 983206, 9, 0, 983207, 9, 0, 983208, 9, 0, 983209, 9, 0, 983211, 9, 0, 983212, 9, 0, 983213, 9, 0, 983214, 9, 0, 983215, 9, 0, 983216, 9, 0, 983217, 9, 0, 983232, 9, 0, 983233, 9, 0, 983234, 9, 0, 983235, 9, 0, 983236, 9, 0, 983237, 9, 0, 983238, 9, 0, 983239, 9, 0, 983244, 9, 0, 983245, 9, 0, 983246, 9, 0, 983247, 9, 0, 983248, 9, 0, 983249, 9, 0, 983250, 9, 0, 983291, 9, 0, 983292, 9, 0, 983293, 9, 0, 983294, 9, 0, 983295, 9, 0, 983296, 9, 0, 983297, 9, 0, 983298, 9, 0, 983318, 9, 0, 983319, 9, 0, 983320, 9, 0, 983321, 9, 0, 983322, 9, 0, 983323, 9, 0 )

[node name="Ground" parent="Tilemaps" instance=ExtResource( 6 )]
tile_data = PoolIntArray( 0, 9, 0, 655525, 4, 0, 655526, 0, 0, 655531, 3, 0, 721052, 4, 0, 721053, 1, 0, 721058, 3, 0, 786432, 2, 0, 786437, 1, 0, 786442, 2, 0, 786447, 2, 0, 786452, 1, 0, 786457, 0, 0, 786462, 1, 0, 786467, 2, 0, 786472, 0, 0, 786477, 1, 0, 786482, 2, 0, 786487, 1, 0, 786492, 2, 0, 786497, 0, 0, 786502, 3, 0, 786509, 4, 0, 786510, 1, 0, 786515, 2, 0, 786520, 1, 0, 786525, 0, 0, 786530, 2, 0, 786535, 3, 0, 786541, 4, 0, 786542, 0, 0, 786547, 3, 0, 786551, 4, 0, 786552, 3, 0, 786558, 4, 0, 786559, 2, 0, 786564, 3, 0, 786569, 4, 0, 786570, 1, 0, 786575, 2, 0, 786580, 0, 0, 786585, 3, 0, 786597, 4, 0, 786603, 3, 0, 786608, 4, 0, 786609, 2, 0, 786614, 0, 0, 786619, 2, 0, 786624, 3, 0, 786630, 4, 0, 786631, 2, 0, 786636, 3, 0, 786642, 4, 0, 786643, 1, 0, 786648, 2, 0, 786653, 0, 0, 786658, 2, 0, 786663, 1, 0, 786668, 2, 0, 786673, 0, 0, 786678, 1, 0, 786683, 3, 0, 786689, 4, 0, 786690, 2, 0, 786695, 0, 0, 786700, 1, 0, 786705, 2, 0, 786710, 3, 0, 786715, 4, 0, 786716, 0, 0, 786721, 1, 0, 786726, 2, 0, 786731, 0, 0, 917670, 9, 0, 917671, 9, 0, 917672, 9, 0, 917673, 9, 0, 917674, 9, 0, 983040, 9, 0, 983197, 9, 0, 983198, 9, 0, 983199, 9, 0, 983200, 9, 0, 983201, 9, 0, 983210, 9, 0 )

[node name="Decoration" parent="Tilemaps" instance=ExtResource( 6 )]
z_index = 1
collision_layer = 0
tile_data = PoolIntArray( 721063, 7, 0, 786432, 5, 0, 786438, 7, 0, 786577, 5, 0, 786649, 6, 0, 786660, 7, 0, 786671, 5, 0, 786673, 6, 0, 786676, 6, 0, 786678, 5, 0, 786679, 7, 0, 786716, 7, 0, 786724, 5, 0, 851997, 6, 0, 852004, 5, 0, 852011, 7, 0, 852019, 5, 0, 852026, 5, 0, 852032, 6, 0, 852050, 5, 0, 852064, 7, 0, 852078, 6, 0, 852096, 7, 0, 852110, 7, 0, 852124, 5, 0, 852127, 7, 0, 852147, 5, 0, 852153, 6, 0, 852157, 7, 0, 852168, 7, 0, 852265, 6, 0 )

[node name="EndLevelExtraPath" parent="Tilemaps" instance=ExtResource( 6 )]
tile_data = PoolIntArray( 786736, 1, 0, 786741, 1, 0, 786746, 1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 96, 0 )

[node name="background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 504.0
margin_bottom = 256.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 624, 0 )

[node name="mid-layer-01" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource( 1 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 624, 0 )

[node name="mid-layer-02" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 864, 0 )

[node name="trees" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
margin_right = 864.0
margin_bottom = 208.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 1, 0 )

[node name="Thing" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 1106, 192 )

[node name="Thing2" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 700, 192 )

[node name="Thing3" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 896, 192 )

[node name="Spider" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 1433, 181 )

[node name="Spider2" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 1556, 181 )

[node name="FlyingGhost" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 1752, 160 )

[node name="FlyingGhost2" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 2050, 161 )

[node name="Spider3" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 2078, 193 )

[node name="Thing4" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 2408, 188 )

[node name="FlyingGhost3" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 2369, 158 )

[node name="FlyingGhost4" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 2434, 192 )

[node name="Thing5" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 2577, 168 )

[node name="Thing6" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 2728, 163 )

[node name="Thing7" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 2876, 185 )

[node name="Spider4" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 3017, 183 )

[node name="Spider5" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 3221, 186 )

[node name="FlyingGhost5" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3796, 102 )

[node name="FlyingGhost6" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3577, 64 )

[node name="FlyingGhost7" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3660, 145 )

[node name="FlyingGhost8" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3871, 175 )

[node name="FlyingGhost9" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3871, 42 )

[node name="FlyingGhost10" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3466, 42 )

[node name="FlyingGhost11" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3724, 42 )

[node name="FlyingGhost12" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 3620, 174 )

[node name="FlyingGhost13" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 4082, 86 )

[node name="Thing8" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 3762, 167 )

[node name="Thing9" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 3451, 167 )

[node name="Spider6" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 4327, 142 )

[node name="Spider7" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 4426, 176 )

[node name="Spider8" parent="Enemies" instance=ExtResource( 12 )]
position = Vector2( 4241, 176 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 87, 138 )

[node name="EndLevel" type="Area2D" parent="."]
position = Vector2( 4657, 195 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevel"]
position = Vector2( 44, 0 )
shape = SubResource( 3 )

[node name="Checkpoint" type="Area2D" parent="."]
position = Vector2( 1918, 142 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint"]
position = Vector2( 0, -23 )
shape = SubResource( 4 )
